--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,4 +9,74 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --background-color: #000028;
+  --accent-color: #FF0070;
+  --nav-color: #FF0070;
+  --main-color: #000028;
+  --text-color: #F1B2CE;
+  --title-color: #DB00FF;
+  --title-shadow-color: #FF0070;
+  background-image: url(/images/cover-image-dark.png);
+}
+
+.theme_dark .decoration {
+  position: absolute;
+  color: var(--nav-color, #FF0070);
+  font-family: var(--text-font, sans-serif);
+  font-size: var(--text-size, 18px);
+  z-index: 1;
+  top: 23px;
+  right: 29px;
+}
+
+.theme_dark .circle {
+  width: 9px; 
+  height: 9px;
+  background: #FF0070;
+  border-radius: 50%;
+  position: absolute;
+  top: 30px;
+  right: 10px;
+  box-shadow: 0 0 4px 2px var(--accent-color, #FF0070);
+}
+
+@media (prefers-color-scheme: dark) {
+  .page.theme_auto {
+    --background-color: #000028;
+    --accent-color: #FF0070;
+    --nav-color: #FF0070;
+    --main-color: #000028;
+    --text-color: #F1B2CE;
+    --title-color: #DB00FF;
+    --title-shadow-color: #FF0070;   
+    }
+
+    .page.theme_auto {
+      background-image: url(/images/cover-image-dark.png);
+    }
+
+    .theme_auto .decoration-position {
+      padding-right: 5px
+    }
+
+    .theme_auto .decoration {
+      position: absolute;
+      color: var(--nav-color, #FF0070);
+      font-family: var(--text-font, sans-serif);
+      font-size: var(--text-size, 18px);
+      z-index: 1;
+      top: 23px;
+      right: 29px;
+    }
+    
+    .theme_auto .circle {
+      width: 9px; 
+      height: 9px;
+      background: #FF0070;
+      border-radius: 50%;
+      position: absolute;
+      top: 30px;
+      right: 10px;
+      box-shadow: 0 0 4px 2px var(--accent-color, #FF0070);
+    }
 }
