--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,593 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
+
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+  background-color: var(--background-color, #000028);
+  padding-left: 10px;
+  padding-right: 10px;
+  position: relative;
+  z-index: 0;
+  background-image: url(/images/cover-image-dark.png);
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.header {
+  position: relative;
+  z-index: 0;
+}
+
+.decoration-position {
+  padding-right: 5px
+}
+
+.decoration {
+  position: absolute;
+  color: var(--nav-color, #FF0070);
+  font-family: var(--text-font, sans-serif);
+  font-size: var(--text-size, 18px);
+  z-index: 1;
+  top: 10px;
+  right: 28px;
+}
+
+.circle {
+  width: 9px; 
+  height: 9px;
+  background: #FF0070;
+  border-radius: 50%;
+  position: absolute;
+  top: 18px;
+  right: 9px;
+  box-shadow: 0 0 4px 2px var(--accent-color, #FF0070);
+}
+
+.decorated-zone::before {
+  content: "";
+  position: absolute;
+  border-top: solid 1px var(--nav-color, #FF0070);
+  border-right: solid 1px var(--nav-color, #FF0070);
+  width: 25px;
+  height: 25px;
+  top: 10px;
+  right: 0;
+}
+
+.decorated-zone::after {
+  content: "";
+  position: absolute;
+  border-bottom: solid 1px var(--nav-color, #FF0070);
+  border-left: solid 1px var(--nav-color, #FF0070);
+  width: 25px;
+  height: 25px;
+  top: 633px;
+  left: 0;
+}
+
+
+.header__theme-menu-list {
+  display: grid;
+  grid-template-rows: repeat(3, 26px);
+  justify-content: end;
+  padding-top: 75px;
+  gap: 10px;
+}
+
+.header__theme-menu-button {
+  background-color: transparent;
+  border: none;
+  color: var(--nav-color, #FF0070);
+  font-family: var(--text-font, sans-serif);
+  text-transform: lowercase;
+  font-size: var(--text-size);
+  width: 4em;
+  height: 1.6em;
+  display: flex;
+  justify-content: center;
+  align-items: baseline;
+}
+
+.header__theme-menu-button:hover {
+  outline: solid 1px var(--nav-color);
+}
+
+.header__theme-menu-button:focus {
+  border-bottom: solid 1px var(--nav-color);
+}
+
+.header__theme-menu-button:focus-visible {
+  outline: none;
+}
+
+.header__theme-menu-button_active {
+  border: solid 1px var(--nav-color, #FF0070);
+}
+
+.header__theme-menu-button_active:hover {
+  outline: none;
+}
+
+.header__theme-menu-button_active:focus-visible {
+  outline: none;
+}
+
+.main-title {
+  font-family: var(--text-font, sans-serif);
+  font-size: var(--title-font-size, clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem));
+  color: var(--title-color, #DB00FF);
+  padding-block: 65px 55px;
+  writing-mode: horizontal-tb;
+  line-height: 0.83em;
+  text-shadow: 4px 4px 0 var(--title-shadow-color, #FF0070);
+}
+
+.title-decor {
+  background-color: var(--accent-color, #FF0070);
+  color: var(--main-color, #000028);
+  font-family: var(--text-font, sans-serif);
+  font-size: var(--text-size, 18px);
+}
+
+.bold-title {
+  font-family: var(--text-font, sans-serif);
+  font-size: var(--text-size);
+  color: var(--nav-color, #FF0070);
+  font-weight: bold;
+}
+
+.normal-title {
+  background-color: var(--accent-color);
+  color: var(--main-color, #000028);
+  font-family: var(--text-font, sans-serif);
+  font-size: var(--text-size, 18px);
+  font-weight: normal;
+}
+
+.main {
+  padding-block-start: 40px;
+}
+
+.section {
+  padding-block-start: 40px;
+}
+
+.section-header {
+  padding-block-end: 20px;
+}
+
+.article {
+  padding-block-start: 20px;
+}
+
+.paragraph {
+  font-family: var(--text-font, sans-serif);
+  color: var(--text-color, #F1B2CE);
+  font-size: var(--text-size, 18px);
+  padding-block-start: 10px;
+  line-height: 23.4px;
+}
+
+.link-shadow {
+  text-shadow: 2px 1px 0 var(--accent-color, #FF0070);
+  text-decoration: none;
+}
+
+.link-shadow:hover {
+  border-bottom: 1px solid var(--text-color);
+}
+
+.link-shadow:focus {
+  outline: solid 1px var(--text-color);
+}
+
+.link-shadow:focus-visible {
+  outline: none;
+}
+
+.images {
+  padding-block-start: 10px;
+  width: 100%;
+}
+
+.images-section {
+  padding-block-end: 40px;
+}
+
+.footer {
+  padding-block-end: 35px;
+}
+
+.footer-title {
+  font-family: var(--text-font, sans-serif);
+  font-size: var(--title-font-size, clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem));
+  color: var(--title-color, #DB00FF);
+  padding-block: 240px 240px;
+  text-shadow: 2px 2px 0 var(--title-shadow-color, #FF0070);
+}
+
+.footer::before {
+  content: "";
+  position: absolute;
+  border-top: solid 1px var(--accent-color, #FF0070);
+  border-right: solid 1px var(--accent-color, #FF0070);
+  width: 25px;
+  height: 25px;
+  right: 10px;
+}
+
+.footer::after {
+  content: "";
+  position: absolute;
+  border-bottom: solid 1px var(--accent-color, #FF0070);
+  border-left: solid 1px var(--accent-color, #FF0070);
+  width: 25px;
+  height: 25px;
+  left: 10px;
+}
+
+@media (375px < width <= 768px) {
+  .page {
+    /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+    background-color: var(--background-color, #000028);
+    padding-left: 0;
+    padding-right: 0;
+    position: relative;
+    z-index: 0;
+    background-image: url(/images/cover-image-dark.png);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .decorated-zone::before {
+    content: "";
+    position: absolute;
+    border-top: solid 1px var(--nav-color, #FF0070);
+    border-right: solid 1px var(--nav-color, #FF0070);
+    width: 25px;
+    height: 25px;
+    top: 20px;
+    right: 20px;
+  }
+  
+  .decorated-zone::after {
+    content: "";
+    position: absolute;
+    border-bottom: solid 1px var(--nav-color, #FF0070);
+    border-left: solid 1px var(--nav-color, #FF0070);
+    width: 25px;
+    height: 25px;
+    top: 979px;
+    left: 20px;
+  }
+  
+  .decoration {
+    position: absolute;
+    color: var(--nav-color, #FF0070);
+    font-family: var(--text-font, sans-serif);
+    font-size: var(--text-size, 18px);
+    z-index: 1;
+    top: 23px;
+    right: 49px;
+  }
+  
+  .circle {
+    width: 9px; 
+    height: 9px;
+    background: #FF0070;
+    border-radius: 50%;
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    box-shadow: 0 0 4px 2px var(--accent-color, #FF0070);
+  }
+
+  .header__theme-menu-list {
+    padding-top: 195px;
+    padding-right: 20px;
+  }
+
+  .header {
+    padding-block-end: 60px;
+  }
+
+  .title-position {
+    padding-left: 50%;
+    padding-block: 162px 183px;
+    padding-right: 20px;
+  }
+  
+  .main-title {
+    padding-left: 0;
+  }
+
+  .main {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .section {
+    display: flex;
+    gap: 20px;
+    padding-block-end: 80px;
+    padding-block-start: 0;
+  }
+
+  .article-size {
+    width: 472px;
+  }
+
+  .bold-title {
+    width: 236px;
+  }
+
+  .section:first-of-type .article:first-of-type {
+    padding-block-start: 0;
+  }
+
+ .section.articles-position {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .articles-position .article:first-of-type {
+    padding-top: 20px;
+  }
+
+  .paragraph:not(:last-of-type) {
+    padding-block-end: 20px;
+  }
+
+  .section.images-section {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 23px 192px 230px 318px;
+    gap: 20px;
+    grid-template-areas: 
+    "title title title"
+    "sunset sunset ice-cream"
+    "tape books ice-cream"
+    "tape street street"
+  }
+
+  .images-section .title-decor {
+    grid-area: title;
+  }
+
+  .images:nth-of-type(1) {
+    grid-area: sunset;
+    height: 100%;
+  }
+
+  .images:nth-of-type(2) {
+    grid-area: ice-cream;
+    object-fit: none;
+    height: 100%;
+  }
+
+  .images:nth-of-type(3) {
+    grid-area: tape;
+    object-fit: none;
+    height: 100%;
+  }
+
+  .images:nth-of-type(4) {
+    grid-area: books;
+    height: 100%;
+  }
+
+  .images:nth-of-type(5) {
+    grid-area: street;
+    height: 100%;
+  }
+
+  .images {
+    padding-block-start: 0;
+    padding-block-end: 0;
+  }
+
+  .footer-title {
+    text-align: center;
+    padding-block: 453px 462px;
+  }
+
+  .footer {
+    padding-block-end: 45px;
+  }
+
+  .footer::before {
+    right: 20px;
+  }
+  
+  .footer::after {
+    left: 20px;
+  }
+}
+
+@media (768px < width)  {
+  .page {
+    /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+    background-color: var(--background-color, #000028);
+    position: relative;
+    padding-left : 0;
+    padding-right: 0;
+    z-index: 0;
+    background-image: url(/images/cover-image-dark.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+  }
+
+  .decorated-zone::before {
+    content: "";
+    position: absolute;
+    border-top: solid 1px var(--nav-color, #FF0070);
+    border-right: solid 1px var(--nav-color, #FF0070);
+    width: 25px;
+    height: 25px;
+    right: 20px;
+    top: 20px;
+  }
+  
+  .decorated-zone::after {
+    content: "";
+    position: absolute;
+    border-bottom: solid 1px var(--nav-color, #FF0070);
+    border-left: solid 1px var(--nav-color, #FF0070);
+    width: 25px;
+    height: 25px;
+    top: 723px;
+    left: 20px;
+  }
+
+  .decoration {
+    position: absolute;
+    color: var(--nav-color, #FF0070);
+    font-family: var(--text-font, sans-serif);
+    font-size: var(--text-size, 18px);
+    z-index: 1;
+    top: 23px;
+    right: 49px;
+  }
+  
+  .circle {
+    width: 9px; 
+    height: 9px;
+    background: #FF0070;
+    border-radius: 50%;
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    box-shadow: 0 0 4px 2px var(--accent-color, #FF0070);
+  }
+
+  .header {
+    padding-right: 20px;
+  }
+
+  .header__theme-menu-list {
+    display: grid;
+    grid-template-columns: repeat(3, 70px);
+    justify-content: center;
+    padding-top: 20px;
+  }
+
+  .main-title {
+    padding-block: 155px 114px;
+  }
+
+  .title-position {
+    padding-left: 50%;
+    padding-block-end: 203px;
+  }
+
+
+  .main {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .section {
+    display: flex;
+    gap: 20px;
+    padding-block-end: 80px;
+    padding-block-start: 0;
+  }
+
+  .article-size {
+    width: calc(100vi - 314px);
+  }
+
+  .bold-title {
+    width: 315px;
+  }
+
+  .section:first-of-type .article:first-of-type {
+    padding-block-start: 0;
+  }
+
+ .article-column {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+  }
+
+  .articles-position .article:first-of-type {
+    padding-top: 20px;
+  }
+
+  .article-column .article {
+    max-width: 33%;
+  }
+
+  .paragraph:not(:last-of-type) {
+    padding-block-end: 20px;
+  }
+
+  .section.images-section {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 23px 192px 230px 318px;
+    gap: 20px;
+    grid-template-areas: 
+    "title title title"
+    "sunset sunset ice-cream"
+    "tape books ice-cream"
+    "tape street street"
+  }
+
+  .images-section .title-decor {
+    grid-area: title;
+  }
+
+  .images:nth-of-type(1) {
+    grid-area: sunset;
+    height: 100%;
+  }
+
+  .images:nth-of-type(2) {
+    grid-area: ice-cream;
+    object-fit: none;
+    height: 100%;
+  }
+
+  .images:nth-of-type(3) {
+    grid-area: tape;
+    object-fit: none;
+    height: 100%;
+  }
+
+  .images:nth-of-type(4) {
+    grid-area: books;
+    height: 100%;
+  }
+
+  .images:nth-of-type(5) {
+    grid-area: street;
+    height: 100%;
+  }
+
+  .images {
+    padding-block-start: 0;
+    padding-block-end: 0;
+  }
+
+  .footer {
+    padding-block-end: 45px;
+  }
+
+  .footer-title {
+    text-align: center;
+    padding-block: 319px;
+  }
+
+  .footer::before {
+    right: 20px;
+  }
+  
+  .footer::after {
+    left: 20px;
+  }
 }
