--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,16 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+
+:root {
+  --text-font: "IBM Plex Mono", sans-serif;
+  --text-size: 18px;
+  --title-font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  --background-color: #000028;
+  --accent-color: #FF0070;
+  --nav-color: #FF0070;
+  --main-color: #000028;
+  --text-color: #F1B2CE;
+  --title-color: #DB00FF;
+  --title-shadow-color: #FF0070;
+}
