--- a/styles/dark.css
+++ b/styles/dark.css
@@ -42,21 +42,18 @@
 
 @media (prefers-color-scheme: dark) {
   .page.theme_auto {
-    --background-color: #000028;
-    --accent-color: #FF0070;
-    --nav-color: #FF0070;
-    --main-color: #000028;
-    --text-color: #F1B2CE;
-    --title-color: #DB00FF;
-    --title-shadow-color: #FF0070;   
-    }
-
-    .page.theme_auto {
+      --background-color: #000028;
+      --accent-color: #FF0070;
+      --nav-color: #FF0070;
+      --main-color: #000028;
+      --text-color: #F1B2CE;
+      --title-color: #DB00FF;
+      --title-shadow-color: #FF0070;   
       background-image: url(/images/cover-image-dark.png);
     }
 
     .theme_auto .decoration-position {
-      padding-right: 5px
+      padding-right: 5px;
     }
 
     .theme_auto .decoration {
