--- a/styles/style.css
+++ b/styles/style.css
@@ -4,11 +4,9 @@
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
   background-color: var(--background-color, #000028);
-  padding-left: 10px;
-  padding-right: 10px;
   position: relative;
   z-index: 0;
-  background-image: url(/images/cover-image-dark.png);
+  background-image: url(../images/cover-image-dark.png);
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
@@ -17,30 +15,32 @@
 .header {
   position: relative;
   z-index: 0;
-}
-
-.decoration-position {
-  padding-right: 5px
+  height: 100vh;
+  min-height: 668px;
+  padding-block: 10px;
+  padding-left: 10px;
+  padding-right: 8px;
 }
 
 .decoration {
   position: absolute;
   color: var(--nav-color, #FF0070);
-  font-family: var(--text-font, sans-serif);
+  font-family: var(--text-font, monospace), monospace;
   font-size: var(--text-size, 18px);
   z-index: 1;
-  top: 10px;
-  right: 28px;
+  top: 12px;
+  right: 38px;
 }
 
-.circle {
+.decoration::after {
+  content: "";
   width: 9px; 
   height: 9px;
   background: #FF0070;
   border-radius: 50%;
   position: absolute;
-  top: 18px;
-  right: 9px;
+  top: 7px;
+  right: -19px;
   box-shadow: 0 0 4px 2px var(--accent-color, #FF0070);
 }
 
@@ -51,8 +51,7 @@
   border-right: solid 1px var(--nav-color, #FF0070);
   width: 25px;
   height: 25px;
-  top: 10px;
-  right: 0;
+  right: 9px;
 }
 
 .decorated-zone::after {
@@ -62,39 +61,44 @@
   border-left: solid 1px var(--nav-color, #FF0070);
   width: 25px;
   height: 25px;
-  top: 633px;
-  left: 0;
+  bottom: 10px;
+  left: 11px;
 }
-
 
 .header__theme-menu-list {
   display: grid;
-  grid-template-rows: repeat(3, 26px);
   justify-content: end;
-  padding-top: 75px;
-  gap: 10px;
+  align-items: center;
+  padding-top: 62px;
+  gap: 8px;
 }
 
 .header__theme-menu-button {
   background-color: transparent;
   border: none;
   color: var(--nav-color, #FF0070);
-  font-family: var(--text-font, sans-serif);
+  font-family: var(--text-font, monospace), monospace;
   text-transform: lowercase;
   font-size: var(--text-size);
   width: 4em;
-  height: 1.6em;
+  height: 1.63em;
   display: flex;
   justify-content: center;
-  align-items: baseline;
+  align-items: center;
 }
 
 .header__theme-menu-button:hover {
-  outline: solid 1px var(--nav-color);
+  border: solid 1px var(--hover-color, rgb(255, 0, 112 , 0.4));
+  width: 72px;
+  height: 29px;
 }
 
 .header__theme-menu-button:focus {
   border-bottom: solid 1px var(--nav-color);
+}
+
+.header__theme-menu-button:active {
+  border: none;
 }
 
 .header__theme-menu-button:focus-visible {
@@ -103,6 +107,12 @@
 
 .header__theme-menu-button_active {
   border: solid 1px var(--nav-color, #FF0070);
+  width: 71px;
+  height: 28px;
+  pointer-events: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .header__theme-menu-button_active:hover {
@@ -114,13 +124,13 @@
 }
 
 .main-title {
-  font-family: var(--text-font, sans-serif);
+  font-family: var(--text-font, monospace), monospace;
   font-size: var(--title-font-size, clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem));
   color: var(--title-color, #DB00FF);
-  padding-block: 65px 55px;
+  padding-block: 65px 57px;
   writing-mode: horizontal-tb;
-  line-height: 0.83em;
-  text-shadow: 4px 4px 0 var(--title-shadow-color, #FF0070);
+  line-height: 0.82em;
+  text-shadow: 5px 5px 0 var(--title-shadow-color, #FF0070);
 }
 
 .title-decor {
@@ -128,10 +138,11 @@
   color: var(--main-color, #000028);
   font-family: var(--text-font, sans-serif);
   font-size: var(--text-size, 18px);
+  font-weight: bold;
 }
 
 .bold-title {
-  font-family: var(--text-font, sans-serif);
+  font-family: var(--text-font, monospace), monospace;
   font-size: var(--text-size);
   color: var(--nav-color, #FF0070);
   font-weight: bold;
@@ -146,23 +157,26 @@
 }
 
 .main {
-  padding-block-start: 40px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .section {
-  padding-block-start: 40px;
+  padding-block-start: 45px;
 }
 
 .section-header {
-  padding-block-end: 20px;
+  padding-block-end: 22px;
 }
 
 .article {
   padding-block-start: 20px;
 }
 
+
+
 .paragraph {
-  font-family: var(--text-font, sans-serif);
+  font-family: var(--text-font, monospace), monospace;
   color: var(--text-color, #F1B2CE);
   font-size: var(--text-size, 18px);
   padding-block-start: 10px;
@@ -192,105 +206,66 @@
 }
 
 .images-section {
-  padding-block-end: 40px;
+  padding-block-end: 51px;
+  padding-block-start: 53px;
+  display: grid;
 }
 
 .footer {
-  padding-block-end: 35px;
+  position: relative;
+  height: 100vh;
+  min-height: 668px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .footer-title {
-  font-family: var(--text-font, sans-serif);
+  font-family: var(--text-font, monospace), monospace;
   font-size: var(--title-font-size, clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem));
   color: var(--title-color, #DB00FF);
-  padding-block: 240px 240px;
+  padding-block: 248px 240px;
+  padding-left: 5px;
   text-shadow: 2px 2px 0 var(--title-shadow-color, #FF0070);
 }
 
-.footer::before {
-  content: "";
-  position: absolute;
-  border-top: solid 1px var(--accent-color, #FF0070);
-  border-right: solid 1px var(--accent-color, #FF0070);
-  width: 25px;
-  height: 25px;
-  right: 10px;
-}
-
-.footer::after {
-  content: "";
-  position: absolute;
-  border-bottom: solid 1px var(--accent-color, #FF0070);
-  border-left: solid 1px var(--accent-color, #FF0070);
-  width: 25px;
-  height: 25px;
+.footer.decorated-zone::after {
+  bottom: 20px;
   left: 10px;
 }
 
-@media (375px < width <= 768px) {
+@media (width >= 768px) {
   .page {
     /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
-    background-color: var(--background-color, #000028);
-    padding-left: 0;
-    padding-right: 0;
-    position: relative;
-    z-index: 0;
-    background-image: url(/images/cover-image-dark.png);
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
   }
 
   .decorated-zone::before {
-    content: "";
-    position: absolute;
-    border-top: solid 1px var(--nav-color, #FF0070);
-    border-right: solid 1px var(--nav-color, #FF0070);
-    width: 25px;
-    height: 25px;
     top: 20px;
     right: 20px;
   }
   
   .decorated-zone::after {
-    content: "";
-    position: absolute;
-    border-bottom: solid 1px var(--nav-color, #FF0070);
-    border-left: solid 1px var(--nav-color, #FF0070);
-    width: 25px;
-    height: 25px;
-    top: 979px;
+    bottom: -125px;
     left: 20px;
   }
   
   .decoration {
-    position: absolute;
-    color: var(--nav-color, #FF0070);
-    font-family: var(--text-font, sans-serif);
-    font-size: var(--text-size, 18px);
-    z-index: 1;
-    top: 23px;
+    top: 22px;
     right: 49px;
   }
   
-  .circle {
-    width: 9px; 
-    height: 9px;
-    background: #FF0070;
-    border-radius: 50%;
-    position: absolute;
-    top: 30px;
-    right: 30px;
-    box-shadow: 0 0 4px 2px var(--accent-color, #FF0070);
+  .decoration::after {
+    top: 7px;
+    right: -19px;
   }
 
   .header__theme-menu-list {
-    padding-top: 195px;
-    padding-right: 20px;
+    padding-top: 188px;
+    padding-right: 19px;
   }
 
   .header {
-    padding-block-end: 60px;
+    padding-block-end: 80px;
+    padding: 0;
   }
 
   .title-position {
@@ -300,10 +275,12 @@
   }
   
   .main-title {
-    padding-left: 0;
+    padding-block-start: 174px;
+    padding-block-end: 0px;
   }
 
   .main {
+    padding-block-start: 207px;
     padding-left: 20px;
     padding-right: 20px;
   }
@@ -311,8 +288,8 @@
   .section {
     display: flex;
     gap: 20px;
-    padding-block-end: 80px;
-    padding-block-start: 0;
+    padding-block-end: 79px;
+    padding-block-start: 0px;
   }
 
   .article-size {
@@ -333,7 +310,7 @@
   }
 
   .articles-position .article:first-of-type {
-    padding-top: 20px;
+    padding-top: 21px;
   }
 
   .paragraph:not(:last-of-type) {
@@ -342,6 +319,7 @@
 
   .section.images-section {
     display: grid;
+     padding-block-start: 4px;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 23px 192px 230px 318px;
     gap: 20px;
@@ -363,13 +341,13 @@
 
   .images:nth-of-type(2) {
     grid-area: ice-cream;
-    object-fit: none;
+    object-fit: cover;
     height: 100%;
   }
 
   .images:nth-of-type(3) {
     grid-area: tape;
-    object-fit: none;
+    object-fit: cover;
     height: 100%;
   }
 
@@ -390,204 +368,100 @@
 
   .footer-title {
     text-align: center;
-    padding-block: 453px 462px;
+    padding-block-start: 417px;
   }
 
-  .footer {
-    padding-block-end: 45px;
-  }
-
-  .footer::before {
+  .footer.decorated-zone::before {
+    top: 0;
     right: 20px;
   }
   
-  .footer::after {
+  .footer.decorated-zone::after {
+    bottom: 20px;
     left: 20px;
   }
 }
 
-@media (768px < width)  {
+@media (1024px <= width)  {
   .page {
     /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
-    background-color: var(--background-color, #000028);
-    position: relative;
-    padding-left : 0;
-    padding-right: 0;
-    z-index: 0;
-    background-image: url(/images/cover-image-dark.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
   }
 
   .decorated-zone::before {
-    content: "";
-    position: absolute;
-    border-top: solid 1px var(--nav-color, #FF0070);
-    border-right: solid 1px var(--nav-color, #FF0070);
-    width: 25px;
-    height: 25px;
-    right: 20px;
     top: 20px;
+    right: 20px;
   }
   
   .decorated-zone::after {
-    content: "";
-    position: absolute;
-    border-bottom: solid 1px var(--nav-color, #FF0070);
-    border-left: solid 1px var(--nav-color, #FF0070);
-    width: 25px;
-    height: 25px;
-    top: 723px;
+    bottom: 20px;
     left: 20px;
-  }
-
-  .decoration {
-    position: absolute;
-    color: var(--nav-color, #FF0070);
-    font-family: var(--text-font, sans-serif);
-    font-size: var(--text-size, 18px);
-    z-index: 1;
-    top: 23px;
-    right: 49px;
-  }
-  
-  .circle {
-    width: 9px; 
-    height: 9px;
-    background: #FF0070;
-    border-radius: 50%;
-    position: absolute;
-    top: 30px;
-    right: 30px;
-    box-shadow: 0 0 4px 2px var(--accent-color, #FF0070);
-  }
-
-  .header {
-    padding-right: 20px;
   }
 
   .header__theme-menu-list {
     display: grid;
     grid-template-columns: repeat(3, 70px);
     justify-content: center;
-    padding-top: 20px;
+    padding-top: 16px;
+    padding-left: 16px;
+    gap: 10px;
+    align-items: center;
   }
 
   .main-title {
-    padding-block: 155px 114px;
+    padding-block: 276px 0;
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
 
   .title-position {
     padding-left: 50%;
-    padding-block-end: 203px;
+    padding-block: 114px 103px;
   }
 
-
   .main {
+    padding-block-start: 60px;
     padding-left: 20px;
     padding-right: 20px;
   }
 
   .section {
     display: flex;
-    gap: 20px;
     padding-block-end: 80px;
     padding-block-start: 0;
   }
 
   .article-size {
-    width: calc(100vi - 314px);
+    width: calc(100vi - 375px);
   }
 
   .bold-title {
     width: 315px;
   }
 
-  .section:first-of-type .article:first-of-type {
-    padding-block-start: 0;
-  }
-
  .article-column {
     display: flex;
     flex-direction: row;
-    gap: 20px;
-  }
-
-  .articles-position .article:first-of-type {
-    padding-top: 20px;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding-block-start: 2px;
   }
 
   .article-column .article {
-    max-width: 33%;
-  }
-
-  .paragraph:not(:last-of-type) {
-    padding-block-end: 20px;
+    max-width: 31.9%;
   }
 
   .section.images-section {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 23px 192px 230px 318px;
-    gap: 20px;
-    grid-template-areas: 
-    "title title title"
-    "sunset sunset ice-cream"
-    "tape books ice-cream"
-    "tape street street"
-  }
-
-  .images-section .title-decor {
-    grid-area: title;
-  }
-
-  .images:nth-of-type(1) {
-    grid-area: sunset;
-    height: 100%;
-  }
-
-  .images:nth-of-type(2) {
-    grid-area: ice-cream;
-    object-fit: none;
-    height: 100%;
-  }
-
-  .images:nth-of-type(3) {
-    grid-area: tape;
-    object-fit: none;
-    height: 100%;
-  }
-
-  .images:nth-of-type(4) {
-    grid-area: books;
-    height: 100%;
-  }
-
-  .images:nth-of-type(5) {
-    grid-area: street;
-    height: 100%;
-  }
-
-  .images {
-    padding-block-start: 0;
-    padding-block-end: 0;
-  }
-
-  .footer {
-    padding-block-end: 45px;
+    padding-block-start: 2px;
+    grid-template-rows: 23px 260px 315px 433px;
   }
 
   .footer-title {
     text-align: center;
-    padding-block: 319px;
-  }
-
-  .footer::before {
-    right: 20px;
+    padding-block: 262px 319px;
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
   
-  .footer::after {
+  .footer.decorated-zone::after {
+    bottom: 39px;
     left: 20px;
   }
 }
